Task2/web1-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    ver: v1
  name: web1-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      ver: v1
  template:
    metadata:
      labels:
        app: web
        ver: v1
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-nginx
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-nginx
          configMap:
            name: nginx-configmap-v1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    ver: v1
  name: web1-canary-svc
spec:
  type: ClusterIP
  selector:
    app: web
    ver: v1
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
