Task2/web2-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    ver: v2
  name: web2-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      ver: v2
  template:
    metadata:
      labels:
        app: web
        ver: v2
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-nginx
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-nginx
          configMap:
            name: nginx-configmap-v2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    ver: v2
  name: web2-canary-svc
spec:
  type: ClusterIP
  selector:
    app: web
    ver: v2
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
