Task2/ingress1-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: canary.tests.tt
    http:
      paths:
      - backend:
          service:
             name: web1-canary-svc
             port:
                number: 80
        path: /
        pathType: Prefix
